--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,18 @@
 			</dependency>
 
 			<dependency>
+				<groupId>dk.clanie</groupId>
+				<artifactId>clanie-util</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
+				<groupId>dk.clanie</groupId>
+				<artifactId>money</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
 				<groupId>joda-time</groupId>
 				<artifactId>joda-time</artifactId>
 				<version>1.5.2</version>
@@ -249,6 +261,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.apache.xmlbeans</groupId>
+				<artifactId>xmlbeans</artifactId>
+				<version>2.3.0</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring</artifactId>
 				<version>${version.spring}</version>
@@ -286,6 +304,12 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-annotations</artifactId>
+				<version>3.3.0.ga</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-commons-annotations</artifactId>
 				<version>3.3.0.ga</version>
 			</dependency>
 
