--- a/pom.xml
+++ b/pom.xml
@@ -313,7 +313,12 @@
 				<version>8.2-504.jdbc4</version>
 			</dependency>
 
-			<!-- Test dependencies -->
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>1.1</version>
+			</dependency>
+
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
