Trying to get GIT SCM provider and maven release plugin configured.

--- a/pom.xml
+++ b/pom.xml
@@ -193,10 +193,12 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
 			</plugin>
+			<!-- Changelog dosn't currently (2008-07-30) work with Git
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changelog-plugin</artifactId>
 			</plugin>
+			-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>taglist-maven-plugin</artifactId>
