--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,15 @@
 				<updatePolicy>daily</updatePolicy>
 			</releases>
 		</repository>
-			<!--
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</releases>
+		</repository>			<!--
 				TODO:
 				Only use scm provider snapshot from here for git support until scm-1.1
 				is released.
