--- a/pom.xml
+++ b/pom.xml
@@ -218,8 +218,12 @@
 		</plugins>
 	</reporting>
 
+	<!--
+		JUnit > 4.4 can't be used with Spring 2.5.x. When switching
+		to Spring 3.0 also switch to newest JUnit further down.
+	-->
 	<properties>
-		<version.spring>2.5</version.spring>
+		<version.spring>2.5.6</version.spring>
 	</properties>
 
 	<dependencyManagement>
@@ -322,21 +326,32 @@
 			<!-- ORM and Database -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate</artifactId>
-				<version>3.2.5.ga</version>
+				<artifactId>hibernate-core</artifactId>
+				<version>3.3.1.GA</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-annotations</artifactId>
-				<version>3.3.0.ga</version>
+				<version>3.4.0.GA</version>
 			</dependency>
 
+			<!--
+				Javassist is required by Hibernate, but not automatically
+				included (maby because it should be possible to use CGLib instead).
+			-->
+    		<dependency>
+        		<groupId>javassist</groupId>
+        		<artifactId>javassist</artifactId>
+        		<version>3.4.GA</version>
+    		</dependency>
+<!--
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-commons-annotations</artifactId>
 				<version>3.3.0.ga</version>
 			</dependency>
+-->
 
 			<dependency>
 				<groupId>postgresql</groupId>
@@ -356,10 +371,14 @@
 				<version>1.1</version>
 			</dependency>
 
+			<!--
+				Junit 4.5 is not compatible with Spring 2.5.x, so
+				stick with 4.4 until switching to Spring 3.0.
+			-->
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.5</version>
+				<version>4.4</version>
 			</dependency>
 
 			<dependency>
