--- a/pom.xml
+++ b/pom.xml
@@ -270,11 +270,16 @@
 				<artifactId>slf4j-api</artifactId>
 				<version>1.5.6</version>
 			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>1.5.6</version>
+			</dependency>
 
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>0.9.10</version>
+				<version>0.9.11</version>
 			</dependency>
 
 			<dependency>
