--- a/pom.xml
+++ b/pom.xml
@@ -244,9 +244,21 @@
 			</dependency>
 
 			<dependency>
-				<groupId>joda-time</groupId>
-				<artifactId>joda-time</artifactId>
-				<version>1.5.2</version>
+  				<groupId>args4j</groupId>
+  				<artifactId>args4j</artifactId>
+  				<version>2.0.9</version>
+			</dependency>
+	
+			<dependency>
+				<groupId>aspectj</groupId>
+				<artifactId>aspectjrt</artifactId>
+				<version>1.5.3</version>
+			</dependency>
+
+			<dependency>
+				<groupId>aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>1.5.3</version>
 			</dependency>
 
 			<dependency>
@@ -262,14 +274,15 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>1.5.6</version>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>1.1</version>
 			</dependency>
+
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>1.5.6</version>
+				<groupId>joda-time</groupId>
+				<artifactId>joda-time</artifactId>
+				<version>1.5.2</version>
 			</dependency>
 
 			<dependency>
@@ -279,15 +292,14 @@
 			</dependency>
 
 			<dependency>
-				<groupId>aspectj</groupId>
-				<artifactId>aspectjrt</artifactId>
-				<version>1.5.3</version>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.5.6</version>
 			</dependency>
-
 			<dependency>
-				<groupId>aspectj</groupId>
-				<artifactId>aspectjweaver</artifactId>
-				<version>1.5.3</version>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>1.5.6</version>
 			</dependency>
 
 			<dependency>
@@ -373,12 +385,6 @@
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
 				<version>1.1.103</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-all</artifactId>
-				<version>1.1</version>
 			</dependency>
 
 			<!--
