--- a/pom.xml
+++ b/pom.xml
@@ -409,6 +409,11 @@
 				</exclusions>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>com.drew</groupId>
+				<artifactId>metadata-extractor</artifactId>
+				<version>2.4.0-beta-1</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
