--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,6 @@
 			<url>http://mvn.cn-consult.dk/3rd-party</url>
 			<releases>
 				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
 			</releases>
 		</repository>
 		<repository>
@@ -86,7 +85,6 @@
 			<url>http://mvn.cn-consult.dk/release</url>
 			<releases>
 				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
 			</releases>
 		</repository>
 		<repository>
@@ -95,16 +93,23 @@
 			<url>http://download.java.net/maven/2/</url>
 			<releases>
 				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
 			</releases>
 		</repository>
 		<!--
 			TODO: Only use scm provider snapshot from here for git support until
 			scm-1.1 is released.
-		-->
 		<repository>
 			<id>don-asf-repository</id>
 			<url>http://people.apache.org/~mrdon/repository/</url>
+		</repository>
+		-->
+		<repository>
+			<id>restlet</id>
+			<name>Restlet</name>
+			<url>http://repository.sonatype.org/content/repositories/restlet/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 	<build>
@@ -240,7 +245,7 @@
 			<dependency>
 				<groupId>dk.clanie</groupId>
 				<artifactId>money</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
+				<version>0.0.2-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -289,6 +294,17 @@
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>0.9.11</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.noelios.restlet</groupId>
+				<artifactId>com.noelios.restlet</artifactId>
+				<version>1.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.restlet</groupId>
+				<artifactId>org.restlet.ext.json</artifactId>
+				<version>1.1.3</version>
 			</dependency>
 
 			<dependency>
