--- a/pom.xml
+++ b/pom.xml
@@ -74,14 +74,16 @@
 
 	<repositories>
 		<repository>
-			<id>repository.local.3rd-party</id>
+			<id>clanie.3rd-party</id>
+			<name>CN Consult 3rd Party Repository</name>
 			<url>http://mvn.cn-consult.dk/3rd-party</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
 		</repository>
 		<repository>
-			<id>repository.local.release</id>
+			<id>clanie.release</id>
+			<name>CN Consult Release Repository</name>
 			<url>http://mvn.cn-consult.dk/release</url>
 			<releases>
 				<enabled>true</enabled>
@@ -112,6 +114,7 @@
 			</snapshots>
 		</repository>
 	</repositories>
+
 	<build>
 		<extensions>
 			<extension>
