--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<ciManagement>
+		<system>Hudson</system>
+		<url>http://hudson.cn-consult.dk</url>
+	</ciManagement>
 
 	<developers>
 		<developer>
