--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
 	<ciManagement>
 		<system>Hudson</system>
 		<url>http://hudson.cn-consult.dk</url>
@@ -39,12 +40,6 @@
 			<organizationUrl>www.cn-consult.dk</organizationUrl>
 		</developer>
 	</developers>
-
-	<!-- TODO: Currently don't have CI running. Install Hudson. -->
-	<!--
-		<ciManagement> <system>Hudson</system>
-		<url>http://hudson.cn-consult.dk/</url> </ciManagement>
-	-->
 
 	<scm>
 		<connection>scm:git:ssh://git/var/cache/git/libs/clanie-parent-pom.git</connection>
@@ -146,7 +141,8 @@
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
 						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.1-db-1</version>
+						<!-- version>1.1-db-1</version -->
+						<version>1.1</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -157,7 +153,8 @@
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
 						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.1-db-1</version>
+						<!-- version>1.1-db-1</version -->
+						<version>1.1</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -187,9 +184,12 @@
 				<artifactId>jdepend-maven-plugin</artifactId>
 			</plugin>
 			<!--
-				Changelog dosn't currently (2008-07-30) work with Git <plugin>
+			Changelog dosn't currently (2009-06-05) work with Git
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-changelog-plugin</artifactId> </plugin>
+				<artifactId>maven-changelog-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
 			-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -257,19 +257,19 @@
 			<dependency>
 				<groupId>aspectj</groupId>
 				<artifactId>aspectjrt</artifactId>
-				<version>1.5.3</version>
+				<version>1.5.4</version>
 			</dependency>
 
 			<dependency>
 				<groupId>aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
-				<version>1.5.3</version>
+				<version>1.5.4</version>
 			</dependency>
 
 			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
-				<version>2.2</version>
+				<version>2.4</version>
 			</dependency>
 
 			<dependency>
@@ -293,7 +293,7 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>0.9.11</version>
+				<version>0.9.15</version>
 			</dependency>
 
 			<dependency>
@@ -310,7 +310,7 @@
 			<dependency>
 				<groupId>org.apache.xmlbeans</groupId>
 				<artifactId>xmlbeans</artifactId>
-				<version>2.3.0</version>
+				<version>2.4.0</version>
 			</dependency>
 
 			<dependency>
@@ -355,17 +355,17 @@
 			<dependency>
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
-				<version>3.2</version>
+				<version>3.2.1</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
-				<version>1.2.1</version>
+				<version>1.2.2</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-pool</groupId>
 				<artifactId>commons-pool</artifactId>
-				<version>1.3</version>
+				<version>1.4</version>
 			</dependency>
 			<dependency> <!-- Requered for proxying classes -->
 				<groupId>cglib</groupId>
@@ -399,7 +399,7 @@
 			<dependency>
 				<groupId>javassist</groupId>
 				<artifactId>javassist</artifactId>
-				<version>3.4.GA</version>
+				<version>3.8.0.GA</version>
 			</dependency>
 			<!--
 				<dependency> <groupId>org.hibernate</groupId>
@@ -410,13 +410,13 @@
 			<dependency>
 				<groupId>postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>8.2-504.jdbc4</version>
+				<version>8.2-507.jdbc4</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.1.103</version>
+				<version>1.1.109</version>
 			</dependency>
 
 			<dependency>
