--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,8 @@
 			<id>org.springsource.maven.snapshot</id>
 			<name>SpringSource Maven Central-compatible Snapshot Repository</name>
 			<url>http://maven.springframework.org/snapshot</url>
+			<releases><enabled>true</enabled></releases>
+			<snapshots><enabled>true</enabled></snapshots>
 		</repository>	
 	</repositories>
 
@@ -255,13 +257,13 @@
 			</dependency>
 	
 			<dependency>
-				<groupId>aspectj</groupId>
+				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjrt</artifactId>
 				<version>1.5.4</version>
 			</dependency>
 
 			<dependency>
-				<groupId>aspectj</groupId>
+				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
 				<version>1.5.4</version>
 			</dependency>
@@ -323,6 +325,11 @@
 						<artifactId>commons-logging</artifactId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${version.spring}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
