--- a/pom.xml
+++ b/pom.xml
@@ -48,49 +48,44 @@
 
 	<distributionManagement>
 		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>repository.local.release</id>
-			<name>Local Release Repository</name>
-			<url>scpexe://mvn.cn-consult.dk/var/lib/mvn/release</url>
-			<layout>default</layout>
+			<id>releases</id>
+			<name>CN Consult Release Repository</name>
+			<url>http://mvn.cn-consult.dk/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
-			<uniqueVersion>true</uniqueVersion>
-			<id>repository.local.snapshot</id>
-			<name>Local Snapshots</name>
-			<url>scpexe://mvn.cn-consult.dk/var/lib/mvn/snapshot</url>
-			<layout>default</layout>
+			<id>snapshots</id>
+			<name>CN Consult Snapshot Repository</name>
+			<url>http://mvn.cn-consult.dk/repositories/snapshots</url>
 		</snapshotRepository>
 		<site>
-			<id>repository.local.release-site</id>
-			<name>CN Consult Website</name>
+			<id>sites</id>
+			<name>CN Consult Project Websites</name>
 			<url>
-				scpexe://mvn.cn-consult.dk/var/lib/mvn/release-site/${project.artifactId}/${project.version}
+				scp://mvn.cn-consult.dk/var/lib/mvn/release-site/${project.artifactId}/${project.version}
 			</url>
 		</site>
-		<downloadUrl>http://mvn.cn-consult.dk/release</downloadUrl>
 	</distributionManagement>
 
 	<repositories>
 		<repository>
 			<id>clanie.3rd-party</id>
 			<name>CN Consult 3rd Party Repository</name>
-			<url>http://mvn.cn-consult.dk/3rd-party</url>
+			<url>http://mvn.cn-consult.dk/repositories/thirdparty/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
 		</repository>
 		<repository>
-			<id>clanie.release</id>
+			<id>releases</id>
 			<name>CN Consult Release Repository</name>
-			<url>http://mvn.cn-consult.dk/release</url>
+			<url>http://mvn.cn-consult.dk/repositories/releases/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
 		</repository>
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
+			<name>Java.net Repository</name>
 			<url>http://download.java.net/maven/2/</url>
 			<releases>
 				<enabled>true</enabled>
@@ -114,13 +109,6 @@
 	</repositories>
 
 	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh-external</artifactId>
-				<version>1.0-alpha-5</version>
-			</extension>
-		</extensions>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
