--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,12 @@
 		<repository>
 			<id>releases</id>
 			<name>CN Consult Release Repository</name>
-			<url>http://mvn.cn-consult.dk/repositories/releases</url>
+			<url>http://nexus.cn-consult.dk/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>CN Consult Snapshot Repository</name>
-			<url>http://mvn.cn-consult.dk/repositories/snapshots</url>
+			<url>http://nexus.cn-consult.dk/content/repositories/snapshots/</url>
 		</snapshotRepository>
 		<site>
 			<id>sites</id>
