--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,6 @@
 		</site>
 	</distributionManagement>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.spring>3.0.2.RELEASE</version.spring>
-	</properties>
-
 	<repositories>
 		<repository>
 			<id>clanie.3rd-party</id>
@@ -97,6 +92,12 @@
 			</releases>
 		</repository>
 	</repositories>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<version.spring>3.0.5.RELEASE</version.spring>
+		<version.slf4j>1.6.1</version.slf4j>
+	</properties>
 
 	<build>
 		<plugins>
@@ -203,7 +204,6 @@
 		</plugins>
 	</reporting>
 
-
 	<dependencyManagement>
 		<dependencies>
 
@@ -234,31 +234,31 @@
 			<dependency>
   				<groupId>args4j</groupId>
   				<artifactId>args4j</artifactId>
-  				<version>2.0.9</version>
+  				<version>2.0.16</version>
 			</dependency>
 	
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjrt</artifactId>
-				<version>1.5.4</version>
+				<version>1.6.10</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
-				<version>1.5.4</version>
+				<version>1.6.10</version>
 			</dependency>
 
 			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
 			</dependency>
 
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
-				<version>1.3</version>
+				<version>1.4</version>
 			</dependency>
 
 			<dependency>
@@ -270,24 +270,24 @@
 			<dependency>
 				<groupId>joda-time</groupId>
 				<artifactId>joda-time</artifactId>
-				<version>1.6</version>
+				<version>1.6.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>0.9.15</version>
+				<version>0.9.27</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.5.6</version>
+				<version>${version.slf4j}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
-				<version>1.5.6</version>
+				<version>${version.slf4j}</version>
 			</dependency>
 
 			<dependency>
@@ -348,12 +348,12 @@
 			<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
-				<version>1.2.2</version>
+				<version>1.4</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-pool</groupId>
 				<artifactId>commons-pool</artifactId>
-				<version>1.4</version>
+				<version>1.5.5</version>
 			</dependency>
 			<dependency> <!-- Requered for proxying classes -->
 				<groupId>cglib</groupId>
@@ -371,13 +371,13 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
-				<version>3.3.1.GA</version>
+				<version>3.5.6-Final</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-annotations</artifactId>
-				<version>3.4.0.GA</version>
+				<version>3.5.6-Final</version>
 			</dependency>
 
 			<!--
@@ -387,7 +387,7 @@
 			<dependency>
 				<groupId>javassist</groupId>
 				<artifactId>javassist</artifactId>
-				<version>3.8.0.GA</version>
+				<version>3.9.0.GA</version>
 			</dependency>
 			<!--
 				<dependency> <groupId>org.hibernate</groupId>
@@ -398,19 +398,19 @@
 			<dependency>
 				<groupId>postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>8.2-507.jdbc4</version>
+				<version>9.0-801.jdbc4</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.1.109</version>
+				<version>1.3.149</version>
 			</dependency>
 
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.5</version>
+				<version>4.8.2</version>
 			</dependency>
 
 			<dependency>
