--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<verbose>true</verbose>
 					<fork>true</fork>
