--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	</licenses>
 
 	<ciManagement>
-		<system>Hudson</system>
+		<system>Jenkins</system>
 		<url>http://hudson.cn-consult.dk</url>
 	</ciManagement>
 
@@ -42,8 +42,8 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:ssh://git/var/cache/git/libs/clanie-parent-pom.git</connection>
-		<url>http://git.cn-consult.dk/?p=libs/clanie-parent-pom.git</url>
+		<connection>scm:git:ssh:git@github.com:clanie/clanie-parent-pom.git</connection>
+		<url>https://github.com/clanie/clanie-parent-pom</url>
 	</scm>
 
 	<distributionManagement>
@@ -67,22 +67,11 @@
 	</distributionManagement>
 
 	<repositories>
-		<repository>
-			<id>clanie.3rd-party</id>
-			<name>CN Consult 3rd Party Repository</name>
-			<url>http://mvn.cn-consult.dk/repositories/thirdparty/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>releases</id>
-			<name>CN Consult Release Repository</name>
-			<url>http://mvn.cn-consult.dk/repositories/releases/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
+		<!-- <repository> <id>clanie.3rd-party</id> <name>CN Consult 3rd Party 
+			Repository</name> <url>http://mvn.cn-consult.dk/repositories/thirdparty/</url> 
+			<releases> <enabled>true</enabled> </releases> </repository> <repository> 
+			<id>releases</id> <name>CN Consult Release Repository</name> <url>http://mvn.cn-consult.dk/repositories/releases/</url> 
+			<releases> <enabled>true</enabled> </releases> </repository> -->
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net Repository</name>
@@ -106,7 +95,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.hibernate>3.5.6-Final</version.hibernate>
 		<version.slf4j>1.6.1</version.slf4j>
-		<version.spring>3.0.5.RELEASE</version.spring>
+		<version.spring>3.1.0.RELEASE</version.spring>
 	</properties>
 
 	<build>
@@ -208,39 +197,13 @@
 				</configuration>
 			</plugin>
 
-			<!--
-				<plugin> <groupId>org.codehaus.mojo</groupId>
-				<artifactId>clirr-maven-plugin</artifactId> </plugin>
-			-->
+			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>clirr-maven-plugin</artifactId> 
+				</plugin> -->
 		</plugins>
 	</reporting>
 
 	<dependencyManagement>
 		<dependencies>
-
-			<dependency>
-				<groupId>dk.clanie</groupId>
-				<artifactId>clanie-core</artifactId>
-				<version>0.0.2-SNAPSHOT</version>
-			</dependency>
-
-			<dependency>
-				<groupId>dk.clanie</groupId>
-				<artifactId>clanie-persistence</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-			</dependency>
-
-			<dependency>
-				<groupId>dk.clanie</groupId>
-				<artifactId>clanie-test</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-			</dependency>
-
-			<dependency>
-				<groupId>dk.clanie</groupId>
-				<artifactId>money</artifactId>
-				<version>0.0.2-SNAPSHOT</version>
-			</dependency>
 
 			<dependency>
 				<groupId>args4j</groupId>
@@ -348,6 +311,16 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-orm</artifactId>
+				<version>${version.spring}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>${version.spring}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aspects</artifactId>
 				<version>${version.spring}</version>
 			</dependency>
 			<!-- Optional spring deps. -->
