--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<version.aspectj>1.6.12</version.aspectj>
 		<version.hibernate>3.5.6-Final</version.hibernate>
 		<version.slf4j>1.6.1</version.slf4j>
 		<version.spring>3.1.0.RELEASE</version.spring>
@@ -214,13 +215,13 @@
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjrt</artifactId>
-				<version>1.6.10</version>
+				<version>${version.aspectj}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
-				<version>1.6.10</version>
+				<version>${version.aspectj}</version>
 			</dependency>
 
 			<dependency>
