--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<inceptionYear>2007</inceptionYear>
 
 	<url>
-		http://mvn.cn-consult.dk/release-site/${project.artifactId}
+		https://github.com/clanie/clanie-parent-pom
 	</url>
 
 	<licenses>
@@ -27,10 +27,12 @@
 		</license>
 	</licenses>
 
+<!--
 	<ciManagement>
 		<system>Jenkins</system>
 		<url>http://hudson.cn-consult.dk</url>
 	</ciManagement>
+-->
 
 	<developers>
 		<developer>
@@ -46,6 +48,7 @@
 		<url>https://github.com/clanie/clanie-parent-pom</url>
 	</scm>
 
+<!--
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
@@ -65,7 +68,8 @@
 			</url>
 		</site>
 	</distributionManagement>
-
+  -->
+    
 	<repositories>
 		<!-- <repository> <id>clanie.3rd-party</id> <name>CN Consult 3rd Party 
 			Repository</name> <url>http://mvn.cn-consult.dk/repositories/thirdparty/</url> 
@@ -87,52 +91,51 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
-
 		</repository>
 	</repositories>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.aspectj>1.6.12</version.aspectj>
-		<version.hibernate>3.5.6-Final</version.hibernate>
-		<version.slf4j>1.6.1</version.slf4j>
-		<version.spring>3.1.0.RELEASE</version.spring>
+		<version.hibernate>4.1.4-Final</version.hibernate>
+		<version.slf4j>1.6.6</version.slf4j>
+		<version.spring>3.1.1.RELEASE</version.spring>
 	</properties>
 
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>2.5.1</version>
 				<configuration>
 					<verbose>true</verbose>
 					<fork>true</fork>
-					<compilerVersion>6.0</compilerVersion>
-					<source>6</source>
-					<target>6</target>
+					<compilerVersion>7.0</compilerVersion>
+					<source>7</source>
+					<target>7</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.1</version>
+				<version>2.3.2</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
 						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.4</version>
+						<version>1.7</version>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-scm-plugin</artifactId>
-				<version>1.4</version>
+				<version>1.7</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
 						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.4</version>
+						<version>1.7</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -144,22 +147,22 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.7.1</version>
+				<version>2.12</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.7</version>
+				<version>2.8.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.5.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -179,7 +182,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.3.1</version>
+				<version>2.5.1</version>
 				<configuration>
 					<threshold>Normal</threshold>
 					<effort>Default</effort>
@@ -233,7 +236,7 @@
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
-				<version>1.4</version>
+				<version>1.6</version>
 			</dependency>
 
 			<dependency>
@@ -245,13 +248,13 @@
 			<dependency>
 				<groupId>joda-time</groupId>
 				<artifactId>joda-time</artifactId>
-				<version>1.6.2</version>
+				<version>2.1</version>
 			</dependency>
 
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>0.9.27</version>
+				<version>1.0.6</version>
 			</dependency>
 
 			<dependency>
@@ -268,7 +271,7 @@
 			<dependency>
 				<groupId>org.apache.xmlbeans</groupId>
 				<artifactId>xmlbeans</artifactId>
-				<version>2.4.0</version>
+				<version>2.5.0</version>
 			</dependency>
 
 			<dependency>
@@ -338,12 +341,12 @@
 			<dependency>
 				<groupId>commons-pool</groupId>
 				<artifactId>commons-pool</artifactId>
-				<version>1.5.5</version>
+				<version>1.6</version>
 			</dependency>
 			<dependency> <!-- Requered for proxying classes -->
 				<groupId>cglib</groupId>
 				<artifactId>cglib</artifactId>
-				<version>2.2</version>
+				<version>2.2.2</version>
 			</dependency>
 
 			<dependency>
@@ -368,7 +371,7 @@
 			<dependency>
 				<groupId>org.hibernate.javax.persistence</groupId>
 				<artifactId>hibernate-jpa-2.0-api</artifactId>
-				<version>1.0.0.Final</version>
+				<version>1.0.1.Final</version>
 			</dependency>
 
 			<dependency>
@@ -380,11 +383,12 @@
 			<!--
 				Javassist is required by Hibernate, but not automatically included
 				(maby because it should be possible to use CGLib instead).
+				Still true? It was for hibernate 3.something but I don't know if it still is true.
 			-->
 			<dependency>
 				<groupId>javassist</groupId>
 				<artifactId>javassist</artifactId>
-				<version>3.9.0.GA</version>
+				<version>3.16.1.GA</version>
 			</dependency>
 			<!--
 				<dependency> <groupId>org.hibernate</groupId>
@@ -395,19 +399,25 @@
 			<dependency>
 				<groupId>postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>9.0-801.jdbc4</version>
+				<version>9.1-901-1.jdbc4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.20</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.3.149</version>
+				<version>1.3.167</version>
 			</dependency>
 
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.8.2</version>
+				<version>4.10</version>
 			</dependency>
 
 			<dependency>
