--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,7 @@
 	</organization>
 	<inceptionYear>2007</inceptionYear>
 
-	<url>
-		https://github.com/clanie/clanie-parent-pom
-	</url>
+	<url>https://github.com/clanie/clanie-parent-pom</url>
 
 	<licenses>
 		<license>
@@ -97,7 +95,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.aspectj>1.6.12</version.aspectj>
-		<version.hibernate>4.1.4-Final</version.hibernate>
+		<version.hibernate>4.1.4.Final</version.hibernate>
 		<version.slf4j>1.6.6</version.slf4j>
 		<version.spring>3.1.1.RELEASE</version.spring>
 	</properties>
