--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 			<id>releases</id> <name>CN Consult Release Repository</name> <url>http://mvn.cn-consult.dk/repositories/releases/</url> 
 			<releases> <enabled>true</enabled> </releases> </repository> -->
 		<repository>
+			<id>spring-roo-repository</id>
+			<name>Spring Roo Repository</name>
+			<url>http://spring-roo-repository.springsource.org/release</url>
+		</repository>
+		<repository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net Repository</name>
 			<url>http://download.java.net/maven/2/</url>
@@ -338,6 +343,12 @@
 				<artifactId>spring-aspects</artifactId>
 				<version>${version.spring}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.roo</groupId>
+				<artifactId>org.springframework.roo.annotations</artifactId>
+				<version>1.2.2.RELEASE</version>
+				<scope>provided</scope>
+			</dependency>
 			<!-- Optional spring deps. -->
 			<dependency>
 				<groupId>commons-collections</groupId>
@@ -418,6 +429,12 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.10</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>1.9.0</version>
 			</dependency>
 
 			<dependency>
