--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<version.java>1.6</version.java>
 		<version.aspectj>1.6.12</version.aspectj>
 		<version.eclipselink>2.4.0</version.eclipselink>
 		<version.hibernate-validator>4.3.0.Final</version.hibernate-validator>
@@ -133,8 +134,8 @@
 					<verbose>true</verbose>
 					<fork>true</fork>
 					<compilerVersion>6.0</compilerVersion>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${version.java}</source>
+					<target>${version.java}</target>
 				</configuration>
 			</plugin>
 			<plugin>
