--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>dk.clanie</groupId>
@@ -36,8 +37,12 @@
 	<scm>
 		<connection>scm:git:ssh://git@github.com/clanie/clanie-parent-pom.git</connection>
 		<url>https://github.com/clanie/clanie-parent-pom</url>
-	  <tag>HEAD</tag>
-  </scm>
+	</scm>
+
+	<distributionManagement>
+		<snapshotRepository>https://oss.sonatype.org/content/repositories/snapshots</snapshotRepository>
+		<repository>https://oss.sonatype.org/service/local/staging/deploy/maven2</repository>
+	</distributionManagement>
 
 	<repositories>
 		<repository>
@@ -184,7 +189,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>clirr-maven-plugin</artifactId>
-				<version>2.5</version> 
+				<version>2.5</version>
 			</plugin>
 		</plugins>
 	</reporting>
