Added distributionManagement settings for deployment to sonatype repositories.

--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,14 @@
 	</scm>
 
 	<distributionManagement>
-		<snapshotRepository>https://oss.sonatype.org/content/repositories/snapshots</snapshotRepository>
-		<repository>https://oss.sonatype.org/service/local/staging/deploy/maven2</repository>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		</snapshotRepository>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		</repository>
 	</distributionManagement>
 
 	<repositories>
